# artifact-utils-lib

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-layer-arrow.txt  requirements-layer.txt  requirements.txt
.github/workflows/: image-ci.yml  layer-ci.yml
infra/: backend.tf  locals.tf  main.tf  outputs.tf  variables.tf
infra/image/: Dockerfile  backend.tf  main.tf  requirements.txt  role.tf  variables.tf  versions.tf
infra/image/src/: app.py
infra/layer/: backend.tf  main.tf  outputs.tf  variables.tf
scripts/: build_arrow_layer.sh  build_layer.sh
src/artifact_lib/: __init__.py  datamesh.py  utils.py
src/scripts/: build_layer.sh
tests/: conftest.py  test_datamesh.py  test_utils.py
